--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -236,7 +236,7 @@ tse <- runTSNE(tse, name = "TSNE", exprs_values = "counts", ncomponents = 3)
 plotReducedDim(tse, "TSNE", colour_by = "Group", ncomponents = c(1:3))
 ```
 
-As a final note, `mia` provides functions for the evaluation of additional dissimilarity indeces, such as:
+As a final note, `mia` provides functions for the evaluation of additional dissimilarity indices, such as:
 * `calculateJSD`, `runJSD` (Jensen-Shannon divergence)
 * `calculateNMDS`, `plotNMDS` (non-metric multi-dimensional scaling)
 * `calculateCCA`, `runCCA` (Canonical Correspondence Analysis)
