--- a/book.bib
+++ b/book.bib
@@ -869,3 +869,29 @@ Bioconductor},
   langid = {english},
   file = {/Users/henrikeckermann/Zotero/storage/D59QN8JL/Sprockett et al. - 2020 - Microbiota assembly, structure, and dynamics among.pdf}
 }
+
+@Article{,
+    title = {TreeSummarizedExperiment: a S4 class for data with hierarchical structure},
+    author = {Ruizhu Huang and Charlotte Soneson and Felix G.M. Ernst and Kevin C. Rue-Albrecht and Guangchuang Yu and Stephanie C. Hicks and Mark D. Robinson},
+    journal = {F1000Research},
+    year = {2021},
+    volume = {9},
+    pages = {1246},
+    url = {https://f1000research.com/articles/9-1246},
+  }
+
+@article{callahan2016bioconductor,
+  title={Bioconductor workflow for microbiome data analysis: from raw reads to community analyses},
+  author={Callahan, Ben J and Sankaran, Kris and Fukuyama, Julia A and McMurdie, Paul J and Holmes, Susan P},
+  journal={F1000Research},
+  volume={5},
+  year={2016},
+  publisher={Faculty of 1000 Ltd}
+}
+
+@techreport{chambers2006s4,
+  title={How s4 methods work},
+  author={Chambers, JM},
+  year={2006},
+  institution={Technical report}
+}
