Implement bibtex references 2

--- a/95_resources.Rmd
+++ b/95_resources.Rmd
@@ -30,7 +30,7 @@ chapterPreamble()
 ### Other relevant containers
 
 * [DataFrame](https://rdrr.io/bioc/S4Vectors/man/DataFrame-class.html) which behaves similarly to `data.frame`, yet efficient and fast when used with large datasets.
-* [DNAString](https://rdrr.io/bioc/Biostrings/man/DNAString-class.html) along with `DNAStringSet`,`RNAString` and `RNAStringSet`  efficient storage and handling of long biological sequences are offered within the [@R-Biostrings] package.
+* [DNAString](https://rdrr.io/bioc/Biostrings/man/DNAString-class.html) along with `DNAStringSet`,`RNAString` and `RNAStringSet`  efficient storage and handling of long biological sequences are offered within the Biostrings package [@R-Biostrings].
 * GenomicRanges ([@GenomicRanges2013]) offers an efficient representation and manipulation of genomic annotations and alignments, see e.g. `GRanges` and `GRangesList` at [An Introduction to the GenomicRangesPackage](https://bioconductor.org/packages/release/bioc/vignettes/GenomicRanges/inst/doc/GenomicRangesIntroduction.html).
 
 [NGS Analysis Basics](http://girke.bioinformatics.ucr.edu/GEN242/tutorials/rsequences/rsequences/) provides a walk-through of the above-mentioned features with detailed examples.
@@ -77,10 +77,10 @@ width="100%"/>
 The (Tree)SummarizedExperiment objects can be converted into the alternative phyloseq format, for which further methods are available.
 
  * [List of R tools for microbiome analysis](https://microsud.github.io/Tools-Microbiome-Analysis/)
- * phyloseq ([@McMurdie2013])
+ * phyloseq [@McMurdie2013]
  * [microbiome tutorial](http://microbiome.github.io/tutorials/)
  * [microbiomeutilities](https://microsud.github.io/microbiomeutilities/)
- * Bioconductor Workflow for Microbiome Data Analysis: from raw reads to community analyses ([@callahan2016bioconductor]).
+ * Bioconductor Workflow for Microbiome Data Analysis: from raw reads to community analyses [@callahan2016bioconductor].
 
 
 
@@ -91,7 +91,7 @@ The (Tree)SummarizedExperiment objects can be converted into the alternative phy
 If you are new to R, you could try [swirl](https://swirlstats.com/)
 for a kickstart to R programming. Further support resources are
 available through the Bioconductor
-project ([@Huber2015]).
+project [@Huber2015].
 
  * R programming basics: [Base R](https://www.rstudio.com/wp-content/uploads/2016/10/r-cheat-sheet-3.pdf)
  * Basics of R programming: [Base R](https://raw.githubusercontent.com/rstudio/cheatsheets/master/base-r.pdf)
@@ -101,7 +101,7 @@ project ([@Huber2015]).
 
 Rmarkdown
 
-* Rmarkdown tips ([@rmarkdown2020])
+* Rmarkdown tips [@rmarkdown2020]
 
 
 RStudio
@@ -116,17 +116,17 @@ RStudio
 
 S4 class system has brought several useful features to the
 object-oriented programming paradigm within R, and it is constantly
-deployed in [R/Bioconductor](https://bioconductor.org/) packages.
+deployed in R/Bioconductor packages [@Huber2015].
     
 |   Online Document:
 
 * Hervé Pagès, [A quick overview of the S4 class system](https://bioconductor.org/packages/release/bioc/vignettes/S4Vectors/inst/doc/S4QuickOverview.pdf).
 * Laurent Gatto, [A practical tutorial on S4 programming](https://bioconductor.org/help/course-materials/2013/CSAMA2013/friday/afternoon/S4-tutorial.pdf)
-* How S4 Methods Work ([@chambers2006s4])
+* How S4 Methods Work [@chambers2006s4]
 
 |   Books:
 
-* John M. Chambers. Software for Data Analysis: Programming with R. Springer, New York, 2008. ISBN-13 978-0387759357. [@chambers2008software]
+* John M. Chambers. Software for Data Analysis: Programming with R. Springer, New York, 2008. ISBN-13 978-0387759357 [@chambers2008software]
 * I Robert Gentleman. R Programming for Bioinformatics. Chapman & Hall/CRC, New York, 2008. ISBN-13 978-1420063677 [@gentleman2008r]
 
 
