--- a/book.bib
+++ b/book.bib
@@ -870,16 +870,6 @@ Bioconductor},
   file = {/Users/henrikeckermann/Zotero/storage/D59QN8JL/Sprockett et al. - 2020 - Microbiota assembly, structure, and dynamics among.pdf}
 }
 
-@Article{,
-    title = {TreeSummarizedExperiment: a S4 class for data with hierarchical structure},
-    author = {Ruizhu Huang and Charlotte Soneson and Felix G.M. Ernst and Kevin C. Rue-Albrecht and Guangchuang Yu and Stephanie C. Hicks and Mark D. Robinson},
-    journal = {F1000Research},
-    year = {2021},
-    volume = {9},
-    pages = {1246},
-    url = {https://f1000research.com/articles/9-1246},
-  }
-
 @article{callahan2016bioconductor,
   title={Bioconductor workflow for microbiome data analysis: from raw reads to community analyses},
   author={Callahan, Ben J and Sankaran, Kris and Fukuyama, Julia A and McMurdie, Paul J and Holmes, Susan P},
@@ -895,3 +885,36 @@ Bioconductor},
   year={2006},
   institution={Technical report}
 }
+
+@book{chambers2008software,
+  title={Software for data analysis: programming with R},
+  author={Chambers, John M},
+  volume={2},
+  year={2008},
+  publisher={Springer}
+}
+
+@book{gentleman2008r,
+  title={R programming for bioinformatics},
+  author={Gentleman, Robert},
+  year={2008},
+  publisher={CRC Press}
+}
+
+@article{huang2020treesummarizedexperiment,
+  title={TreeSummarizedExperiment: a S4 class for data with hierarchical structure},
+  author={Huang, Ruizhu and Soneson, Charlotte and Ernst, Felix GM and Rue-Albrecht, Kevin C and Yu, Guangchuang and Hicks, Stephanie C and Robinson, Mark D},
+  journal={F1000Research},
+  volume={9},
+  year={2020},
+  publisher={Faculty of 1000 Ltd}
+}
+
+@Book{,
+    author = {Carson Sievert},
+    title = {Interactive Web-Based Data Visualization with R, plotly, and shiny},
+    publisher = {Chapman and Hall/CRC},
+    year = {2020},
+    isbn = {9781138331457},
+    url = {https://plotly-r.com},
+  }
