Implement bibtex references 3

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -23,20 +23,17 @@ knitr::include_graphics("general/figures/FigureOverviewV2.png")
 
 ## Data containers
 
-[`SummarizedExperiment`](https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html)
-(`SE`) is a generic and highly optimized container for complex data
+`SummarizedExperiment` (`SE`) [@R-SummarizedExperiment] is a generic and highly optimized container for complex data
 structures. It has become a common choice for analysing various types
 of biomedical profiling data, such as RNAseq, ChIp-Seq, microarrays,
 flow cytometry, proteomics, and single-cell
 sequencing.
 
-[`TreeSummarizedExperiment`](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html)
-(`TreeSE`) was developed as an extension to incorporate hierarchical
+[`TreeSummarizedExperiment`] (`TreeSE`) [@R-TreeSummarizedExperiment] was developed as an extension to incorporate hierarchical
 information (such as phylogenetic trees and sample hierarchies) and
 reference sequences.
 
-[`MultiAssayExperiment`](https://www.bioconductor.org/packages/release/bioc/html/MultiAssayExperiment.html)
-(`MAE`) provides an organized way to bind several different data
+[`MultiAssayExperiment`] (`MAE`) [@MultiAssayExperiment2017] provides an organized way to bind several different data
 structures together in a single object. For example, we can bind
 microbiome data (in `TreeSE` format) with metabolomic profiling data
 (in `SE`) format, with shared sample metadata. This is convenient and
@@ -505,10 +502,9 @@ help(GlobalPatterns)
 
 ### ExperimentHub data
 
-[ExperimentHub](https://bioconductor.org/packages/release/bioc/vignettes/ExperimentHub/inst/doc/ExperimentHub.html)
+[ExperimentHub](https://bioconductor.org/packages/release/bioc/vignettes/ExperimentHub/inst/doc/ExperimentHub.html) 
 provides a variety of data resources, including the
-[microbiomeDataSets](https://bioconductor.org/packages/devel/data/experiment/html/microbiomeDataSets.html)
-package.
+microbiomeDataSets package [@hub2021; @microlahti2021].
 
 A table of the available data sets is available through the `availableDataSets`
 function.
@@ -529,7 +525,7 @@ mae <- HintikkaXOData()
 ```
 
 Data is available in `r Biocpkg("SummarizedExperiment")`, `r
-Biocpkg("TreeSummarizedExperiment")`, and `r
+Biocpkg("TreeSummarizedExperiment")` and `r
 Biocpkg("MultiAssayExperiment")` data containers; see the separate
 page on [alternative
 containers](https://microbiome.github.io/OMA/multitable.html) for more
@@ -539,10 +535,9 @@ details.
 
 ### Other data sources
 
-The
-[curatedMetagenomicData](https://waldronlab.io/curatedMetagenomicData)
+The curatedMetagenomicData 
 is an independent source that provides various example data sets as
-`(Tree)SummarizedExperiment` objects. This resource provides curated
+`(Tree)SummarizedExperiment` objects [@Pasolli2017]. This resource provides curated
 human microbiome data including gene families, marker abundance,
 marker presence, pathway abundance, pathway coverage, and relative
 abundance for samples from different body sites. See the package
