--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -222,9 +222,8 @@ pheatmap(mat, annotation_row = taxa_clusters,
 ```
 
 In addition to _pheatmap_ package, there are also other packages that
-provide functions for more complex heatmaps, such as [_iheatmapr_](https://docs.ropensci.org/iheatmapr/articles/full_vignettes/iheatmapr.html)
-and 
-[ComplexHeatmap](https://academic.oup.com/bioinformatics/article/32/18/2847/1743594?login=true).
+provide functions for more complex heatmaps, such as _iheatmapr_
+and ComplexHeatmap [@iheat2017; @gu2016complex].
 
 [sechm](http://www.bioconductor.org/packages/release/bioc/vignettes/sechm/inst/doc/sechm.html)
 package provides wrapper for _ComplexHeatmap_.
