--- a/book.bib
+++ b/book.bib
@@ -910,11 +910,76 @@ Bioconductor},
   publisher={Faculty of 1000 Ltd}
 }
 
-@Book{,
+@Book{plotly2020,
     author = {Carson Sievert},
     title = {Interactive Web-Based Data Visualization with R, plotly, and shiny},
     publisher = {Chapman and Hall/CRC},
     year = {2020},
     isbn = {9781138331457},
     url = {https://plotly-r.com},
+  }
+
+@Manual{hub2021,
+    title = {ExperimentHub: Client to access ExperimentHub resources},
+    author = {Martin Morgan and Lori Shepherd},
+    year = {2021},
+    note = {R package version 2.2.0},
+  }
+
+@Manual{microlahti2021,
+    title = {microbiomeDataSets: Experiment Hub based microbiome datasets},
+    author = {Leo Lahti and Felix G.M. Ernst and Sudarshan Shetty},
+    year = {2021},
+    note = {R package version 1.2.0},
+  }
+
+@Article{iheat2017,
+    author = {Alicia N Schep and Sarah K Kummerfeld},
+    title = {iheatmapr: Interactive complex heatmaps in R},
+    year = {2017},
+    journal = {Journal of Open Source Software},
+    url = {http://dx.doi.org/10.21105/joss.00359},
+    doi = {10.21105/joss.00359},
+  }
+
+@article{gu2016complex,
+  title={Complex heatmaps reveal patterns and correlations in multidimensional genomic data},
+  author={Gu, Zuguang and Eils, Roland and Schlesner, Matthias},
+  journal={Bioinformatics},
+  volume={32},
+  number={18},
+  pages={2847--2849},
+  year={2016},
+  publisher={Oxford University Press}
+}
+
+@Manual{miaviz2022,
+    title = {miaViz: Microbiome Analysis Plotting and Visualization},
+    author = {Felix G.M. Ernst and Tuomas Borman and Leo Lahti},
+    year = {2022},
+    note = {R package version 1.2.1},
+  }
+
+@Manual{miaTime2021,
+    title = {miaTime: What the Package Does (Title Case)},
+    author = {Who wrote it},
+    year = {2021},
+    note = {R package version 0.1.0},
+  }
+
+@Misc{miaSim2021,
+    title = {miaSim R package},
+    author = {Yagmur Simsek and Leo Lahti and Daniel Garza and Karoline Faust},
+    url = {microbiome.github.io/miaSim},
+    note = {Version 1.0.0},
+  }
+
+@Article{philr2017,
+    title = {A phylogenetic transform enhances analysis of compositional microbiota data},
+    author = {Justin D Silverman and Alex D Washburne and Sayan Mukherjee and Lawrence A David},
+    year = {2017},
+    journal = {eLife},
+    volume = {6},
+    doi = {10.7554/eLife.21887},
+    url = {https://elifesciences.org/content/6/e21887},
   }
