--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -42,11 +42,11 @@ devtools::install_github("microbiome/mia")
 
 Some of the R packages supporting the framework include:
 
-- [mia](microbiome.github.io/mia) : Microbiome analysis tools   
-- [miaViz](microbiome.github.io/miaViz) : Microbiome analysis specific visualization
-- [miaSim](microbiome.github.io/miaSim) : Microbiome data simulations
-- [miaTime](microbiome.github.io/miaTime) : Microbiome time series analysis
-- [philr](http://bioconductor.org/packages/devel/bioc/html/philr.html) (external)
+- [mia](microbiome.github.io/mia): Microbiome analysis tools [@R-mia]
+- [miaViz](microbiome.github.io/miaViz): Microbiome analysis specific visualization [@miaviz2022]
+- [miaSim](microbiome.github.io/miaSim): Microbiome data simulations [@miaSim2021]
+- [miaTime](microbiome.github.io/miaTime): Microbiome time series analysis [@miaTime2021]
+- philr (external, @philr2017)
 
 
 
