Implement bibtex references 4

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -240,7 +240,7 @@ plotReducedDim(tse, "TSNE", colour_by = "Group", ncomponents = c(1:3))
 
 ## Visualizing the most dominant genus on PCoA
 
-In this section we visualize most dominant genus on PCoA. A similar visualization was proposed in [Taxonomic signatures of cause-specific mortality risk in human gut microbiome](https://www.nature.com/articles/s41467-021-22962-y), Salosensaari et al. (2021).
+In this section we visualize most dominant genus on PCoA. A similar visualization was proposed by Salosensaari et al. [-@salosensaari2021taxonomic].
 
 
 Let us agglomerate the data at a Genus level and getting the dominant taxa per sample.
@@ -293,7 +293,7 @@ plot <-plotReducedDim(tse_Genus,"PCoA_BC", colour_by = "most_abundant") +
 plot
 ```
 
-Note: A 3D interactive version of the earlier plot can be found from [here](https://microbiome.github.io/OMA/interactive-3d-plots.html).
+Note: A 3D interactive version of the earlier plot can be found from /@ref(extras).
 
 Similarly let's visualize and compare the sub-population.
 
