--- a/book.bib
+++ b/book.bib
@@ -983,3 +983,139 @@ Bioconductor},
     doi = {10.7554/eLife.21887},
     url = {https://elifesciences.org/content/6/e21887},
   }
+
+@article{hintikka2021xylo,
+  title={Xylo-Oligosaccharides in Prevention of Hepatic Steatosis and Adipose Tissue Inflammation: Associating Taxonomic and Metabolomic Patterns in Fecal Microbiomes with Biclustering},
+  author={Hintikka, Jukka and Lensu, Sanna and M{\"a}kinen, Elina and Karvinen, Sira and Honkanen, Marjaana and Lind{\'e}n, Jere and Garrels, Tim and Pekkala, Satu and Lahti, Leo},
+  journal={International journal of environmental research and public health},
+  volume={18},
+  number={8},
+  pages={4049},
+  year={2021},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{aubert2021model,
+  title={Model-based biclustering for overdispersed count data with application in microbial ecology},
+  author={Aubert, Julie and Schbath, Sophie and Robin, St{\'e}phane},
+  journal={Methods in Ecology and Evolution},
+  volume={12},
+  number={6},
+  pages={1050--1061},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+@Manual{biclust2021,
+    title = {biclust: BiCluster Algorithms},
+    author = {Sebastian Kaiser and Rodrigo Santamaria and Tatsiana Khamiakova and Martin Sill and Roberto Theron and Luis Quintales and Friedrich Leisch and Ewoud {De Troyer} and Sami Leon.},
+    year = {2021},
+    note = {R package version 2.0.3},
+    url = {https://CRAN.R-project.org/package=biclust},
+  }
+
+@Article{alde2016,
+    title = {*** Displaying Variation in Large Datasets: a Visual Summary of Effect Sizes},
+    author = {Gregory B. Gloor and Jean M. Macklaim and Andrew D. Fernandes},
+    journal = {*** Journal of Computational and Graphical Statistics, },
+    year = {2016},
+    url = {*** http://dx.doi.org/10.1080/10618600.2015.1131161},
+  }
+
+@Article{ancombc2020,
+    title = {Analysis of compositions of microbiomes with bias correction},
+    author = {Huang Lin and Shyamal Das Peddada},
+    year = {2020},
+    journal = {Nature communications},
+    volume = {11},
+    number = {1},
+    pages = {1--11},
+    doi = {https://doi.org/10.1038/s41467-020-17041-7},
+    url = {https://www.nature.com/articles/s41467-020-17041-7},
+  }
+
+@Manual{corncob2021,
+    title = {corncob: Count Regression for Correlated Observations with the
+Beta-Binomial},
+    author = {Bryan D Martin and Daniela Witten and Amy D Willis},
+    year = {2021},
+    note = {R package version 0.2.0},
+    url = {https://CRAN.R-project.org/package=corncob},
+  }
+
+@Article{deseq2014,
+    title = {Moderated estimation of fold change and dispersion for RNA-seq data with DESeq2},
+    author = {Michael I. Love and Wolfgang Huber and Simon Anders},
+    year = {2014},
+    journal = {Genome Biology},
+    doi = {10.1186/s13059-014-0550-8},
+    volume = {15},
+    issue = {12},
+    pages = {550},
+  }
+
+@Article{edger2016,
+    author = {Yunshun Chen and Aaron A T Lun and Gordon K Smyth},
+    title = {From reads to genes to pathways: differential expression analysis of RNA-Seq experiments using Rsubread and the edgeR quasi-likelihood pipeline},
+    year = {2016},
+    journal = {F1000Research},
+    volume = {5},
+    pages = {1438},
+    doi = {10.12688/f1000research.8987.2},
+  }
+
+@Manual{lefser2021,
+    title = {lefser: R implementation of the LEfSE method for microbiome biomarker
+discovery},
+    author = {Asya Khleborodova},
+    year = {2021},
+    note = {R package version 1.4.0},
+    url = {https://github.com/waldronlab/lefser},
+  }
+
+@Manual{maaslin2020,
+    title = {MaAsLin 2: Multivariable Association in Population-scale Meta-omics Studies.},
+    author = {Himel Mallick and Ali Rahnavard and Lauren J. McIver},
+    year = {2020},
+    note = {R/Bioconductor package},
+    url = {http://huttenhower.sph.harvard.edu/maaslin2},
+  }
+
+@Article{metagenomeseq2017,
+    title = {Longitudinal differential abundance analysis of marker-gene surveys using smoothing splines},
+    author = {Joseph N. Paulson* and Hisham Talukder* and Hector Corrada Bravo},
+    year = {2017},
+    journal = {biorxiv},
+    doi = {10.1101/099457},
+    url = {https://www.biorxiv.org/content/10.1101/099457v1},
+  }
+
+@Article{limma2015,
+    author = {Matthew E Ritchie and Belinda Phipson and Di Wu and Yifang Hu and Charity W Law and Wei Shi and Gordon K Smyth},
+    title = {{limma} powers differential expression analyses for {RNA}-sequencing and microarray studies},
+    journal = {Nucleic Acids Research},
+    year = {2015},
+    volume = {43},
+    number = {7},
+    pages = {e47},
+    doi = {10.1093/nar/gkv007},
+  }
+
+@Article{fido2019,
+  title = {Bayesian Multinomial Logistic Normal Models through Marginally Latent Matrix-T Processes},
+  author = {Justin D Silverman and Kim Roche and Zachary C Holmes and Lawrence A David and Sayan Mukherjee},
+  year = {2019},
+  journal = {arXiv e-prints},
+  url = {https://arxiv.org/abs/1903.11695},
+}
+
+@article{salosensaari2021taxonomic,
+  title={Taxonomic signatures of cause-specific mortality risk in human gut microbiome},
+  author={Salosensaari, Aaro and Laitinen, Ville and Havulinna, Aki S and Meric, Guillaume and Cheng, Susan and Perola, Markus and Valsta, Liisa and Alfthan, Georg and Inouye, Michael and Watrous, Jeramie D and others},
+  journal={Nature communications},
+  volume={12},
+  number={1},
+  pages={1--8},
+  year={2021},
+  publisher={Nature Publishing Group}
+}
