--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -10,8 +10,8 @@ The idea is to find clusters where subset of features/samples share similar patt
 over samples/features. 
 
 There are multiple biclustering packages available, In this example, we use following methods
--   [biclust](https://cran.r-project.org/web/packages/biclust/index.html)
--   [cobiclust](https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.13582)
+-   biclust [@biclust2021]
+-   cobiclust [@aubert2021model]
 
 _cobiclust_ is especially developed for microbiome data whereas _biclust_ is more
 general method. In this section, we show three different cases and example 
@@ -25,7 +25,7 @@ Biclusters can be visualized using heatmap or boxplot, for instance. For checkin
 also scatter plot might be valid choice. 
 
 Check more ideas for heatmaps from 
-[here](https://microbiome.github.io/OMA/microbiome-community.html#composition-heatmap).
+[here](https://microbiome.github.io/OMA/microbiome-community.html#composition-heatmap). #bibtexlink
 
 ## Taxa vs samples
 
