--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -30,15 +30,15 @@ has also been criticized recently [@quinnCritiqueDifferentialAbundance2021].
 
 There are many tools to perform DAA. The most popular tools, without going into
 evaluating whether or not they perform well for this task, are:  
-- [ALDEx2](https://bioconductor.org/packages/release/bioc/html/ALDEx2.html)   
-- [ANCOM-BC](https://bioconductor.org/packages/release/bioc/html/ANCOMBC.html)  
-- [corncob](https://cran.r-project.org/web/packages/corncob/index.html)  
-- [DESeq2](https://bioconductor.org/packages/release/bioc/html/DESeq2.html)  
-- [edgeR](https://bioconductor.org/packages/release/bioc/html/edgeR.html)  
-- [LEFse](https://bioconductor.org/packages/release/bioc/html/lefser.html)  
-- [MaAsLin2](https://www.bioconductor.org/packages/release/bioc/html/Maaslin2.html)  
-- [metagenomeSeq](https://www.bioconductor.org/packages/release/bioc/html/metagenomeSeq.html)  
-- [limma voom](https://bioconductor.org/packages/release/bioc/html/limma.html)  
+- ALDEx2 [@alde2016] 
+- ANCOMBC [@ancombc2020]
+- corncob [@corncob2021]
+- DESeq2 [@deseq2014] 
+- edgeR [@edger2016]
+- lefser [@lefser2021]
+- Maaslin2 [@maaslin2020]
+- metagenomeSeq [@metagenomeseq2017]
+- limma [@limma2015]
 - [t-test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/t.test)  
 - [Wilcoxon test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/wilcox.test)  
 
@@ -457,14 +457,14 @@ group-wise associations.
 
 ### Group-wise associations testing based on balances with fido
 
-[TreeSummarizedExperiment](https://bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html) 
+TreeSummarizedExperiment [@R-TreeSummarizedExperiment]
 frequently includes a Phylogenetic tree along with associated data about the
 experiment (at `colData`), that holds covariates which can be used for
 analyzing group-wise associations. 
 
 Such an analysis could be performed with the function `pibble` from the `fido`
-package, that offers a Multinomial Logistic-Normal Linear Regression model; see
-[vignette](https://jsilve24.github.io/fido/articles/introduction-to-fido.html) of package.
+package, that offers a Multinomial Logistic-Normal Linear Regression model (see
+vignette of package,  @fido2019)
 
 
 The following presents such an exemplary analysis based on the 
