Implement internal cross references

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -146,7 +146,7 @@ the links in an existing object, the `changeTree` function is available.
 
 
 
-### Alternative experiments
+### Alternative experiments {#alt-exp}
 
 _**Alternative experiments**_ differ from transformations as they can
 contain complementary data, which is no longer tied to the same
@@ -192,7 +192,7 @@ For more details of altExp have a look at the [Intro vignette](https://bioconduc
 
 
 
-### MultiAssayExperiments
+### MultiAssayExperiments {#mae}
 
 _**Multiple experiments**_ relate to complementary measurement types,
 such as transcriptomic or metabolomic profiling of the microbiome or
