--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -44,7 +44,7 @@ plotAbundance(tse, abund_values="relabundance", rank = "Phylum",
               order_rank_by="abund", order_sample_by = "Bacteroidetes")
 ```
 
-### Composition heatmap 
+### Composition heatmap {#composition-heatmap}
 
 Community composition can be visualized with heatmap, where the
 horizontal axis represents samples and the vertical axis the
