--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -28,9 +28,8 @@ different types of data in a same container. Because of that, the _miaverse_ is
 well-suitable for multi-assay microbiome data which incorporates different types 
 of complementary data sources in a single reproducible workflow. 
 
-Another experiment can be stored in 
-altExp
-slot of SE data container or both experiments can be stored side-by-side in MAE data container (see /@ref(containers)). #bibtexlink 
+Another experiment can be stored in altExp
+slot of SE data container or both experiments can be stored side-by-side in MAE data container (see the sections /@ref(alt-exp) and /@ref(mae) to learn more about altExp and MAE objects, respectively). 
 
 Different experiments are first imported into SE or TreeSE data container similarly
 to the case when only one experiment is present. After that different experiments are 
