--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -123,6 +123,7 @@ if( !require(ggsignif) ){
   install.packages(ggsignif)
 }
 library(ggplot2)
+library(patchwork)
 library(ggsignif)
 
 # Subsets the data. Takes only those samples that are from feces, skin, or tongue,
@@ -164,7 +165,7 @@ Below a visual comparison between shannon and faith indices is shown with a viol
 plots <- lapply(c("shannon", "faith"),
                 plotColData,
                 object = tse)
-ggpubr::ggarrange(plotlist = plots, nrow = 1, ncol = 2)
+plots[[1]] + plots[[2]]
 ```
  
 Alternatively, the phylogenetic diversity can be calculated by `mia::estimateDiversity`. This is a faster re-implementation of   
@@ -221,14 +222,20 @@ head(colData(tse)$log_modulo_skewness)
 A plot comparing all the diversity measures calculated above and stored in `colData` can then be constructed directly.
 
 ```{r plot-all-diversities}
-plots <- lapply(c("observed", "shannon","simpson", "relative", "faith","log_modulo_skewness"),
+plots <- lapply(c("observed", "shannon", "simpson", "relative", "faith", "log_modulo_skewness"),
                 plotColData,
                 object = tse,
                 x = "SampleType",
                 colour_by = "SampleType")
 
-plots <- lapply(plots,"+", theme(axis.text.x = element_text(angle=45,hjust=1)))
-ggpubr::ggarrange(plotlist = plots, nrow = 2, ncol = 3, common.legend = TRUE, legend = "right")
+plots <- lapply(plots, "+", 
+                theme(axis.text.x = element_blank(),
+                      axis.title.x = element_blank(),
+                      axis.ticks.x = element_blank()))
+
+((plots[[1]] | plots[[2]] | plots[[3]]) / 
+(plots[[4]] | plots[[5]] | plots[[6]])) +
+  plot_layout(guides = "collect")
 ```
 
 ## Session Info {-}
