--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -185,11 +185,14 @@ tse <- runMDS(tse, FUN = vegan::vegdist, name = "MDS_euclidean",
 tse <- runNMDS(tse, FUN = vegan::vegdist, name = "NMDS_BC")
 tse <- runNMDS(tse, FUN = vegan::vegdist, name = "NMDS_euclidean",
                method = "euclidean")
-plots <- lapply(c("PCoA_BC","MDS_euclidean","NMDS_BC","NMDS_euclidean"),
-                plotReducedDim, object = tse, colour_by = "Group")
-ggpubr::ggarrange(plotlist = plots, nrow = 2, ncol = 2, common.legend = TRUE,
-                  legend = "right")
+plots <- lapply(c("PCoA_BC", "MDS_euclidean", "NMDS_BC", "NMDS_euclidean"),
+                plotReducedDim,
+                object = tse,
+                colour_by = "Group")
 
+library(patchwork)
+plots[[1]] + plots[[2]] + plots[[3]] + plots[[4]] +
+  plot_layout(guides = "collect")
 ```
 
 The _Unifrac_ method is a special case, as it requires data on the
