Replace cowplot with patchwork

--- a/add-comm-typing.Rmd
+++ b/add-comm-typing.Rmd
@@ -181,7 +181,7 @@ Let's take a look at the MDS ordination with the Bray-Curtis dissimilarity in th
 ```{r message = FALSE, warning = FALSE}
 library(scater)
 library(RColorBrewer)
-library(cowplot)
+library(patchwork)
 
 # set up colours
 CSTColors <- brewer.pal(6, "Paired")[c(2, 5, 3, 4, 1, 6)]
@@ -198,7 +198,7 @@ p1 <- scater::plotReducedDim(tse2, "MDS_BC", colour_by = "CST", point_alpha = 1,
 p2 <- scater::plotReducedDim(tse2, "MDS_BC", colour_by = "CST", point_alpha = 1, 
                              ncomponents = c(3, 4), percentVar = var[c(1, 2, 3, 4)]*100) + th
 # show results
-plot_grid(p1 + CSTColorScale, p2 + CSTColorScale, nrow = 2)
+(p1 + CSTColorScale) / (p2 + CSTColorScale)
 ```
 
 And now nMDS.
