Add tex ref on patchwork

--- a/book.bib
+++ b/book.bib
@@ -869,3 +869,11 @@ Bioconductor},
   langid = {english},
   file = {/Users/henrikeckermann/Zotero/storage/D59QN8JL/Sprockett et al. - 2020 - Microbiota assembly, structure, and dynamics among.pdf}
 }
+
+@Manual{patchwork2022,
+    title = {patchwork: The Composer of Plots},
+    author = {Thomas Lin Pedersen},
+    year = {2022},
+    note = {https://patchwork.data-imaginist.com,
+https://github.com/thomasp85/patchwork},
+  }
