Replace redundant information with colour-labeled barcode

--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -288,9 +288,9 @@ plotColData(tse,"sum","X.SampleID", colour_by = "SampleType") +
     labs(y = "Library size (N)", x = "Sample ID") 	    
 ```
 
-```{r plot-viz-lib-size-3, fig.width=8, fig.height=4, fig.cap="Library sizes per sample type."}
-plotColData(tse,"sum","SampleType", colour_by = "SampleType") + 
-    theme(axis.text.x = element_text(angle = 45, hjust=1))
+```{r plot-viz-lib-size-3, fig.width = 8, fig.height = 4, fig.cap = "Library sizes per sample type and colour-labeled barcode."}
+plotColData(tse, "sum", "SampleType", colour_by = "Final_Barcode") + 
+    theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
 
