Add coulour-labeled sample type to phylo-div-2

--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -165,7 +165,8 @@ Below a visual comparison between shannon and faith indices is shown with a viol
 plots <- lapply(c("shannon", "faith"),
                 plotColData,
                 object = tse, colour_by = "SampleType")
-plots[[1]] + plots[[2]]
+plots[[1]] + plots[[2]] +
+  plot_layout(guides = "collect")
 ```
  
 Alternatively, the phylogenetic diversity can be calculated by `mia::estimateDiversity`. This is a faster re-implementation of   
