--- a/book.bib
+++ b/book.bib
@@ -85,6 +85,18 @@
 }
 
 
+@article{Argelaguet2018,
+  author =	 {Argelaguet, Ricard et al.},
+  title =	 {Multi-Omics Factor Analysis—a framework for unsupervised integration of multi-omics data sets},
+  journal =	 {Molecular Systems Biology},
+  volume =	 14,
+  number =	 6,
+  pages =	 {e8124},
+  doi =	 	 {10.15252/msb.20178124},
+  year =	 2018
+}
+
+
 @Article{Callahan2016,
   author =	 {Ben J. Callahan and Kris Sankaran and Julia
                   A. Fukuyama and Paul J. McMurdie and Susan
