--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -184,9 +184,9 @@ if(!require(reticulate)){
     install.packages("reticulate")
 }
 
-#reticulate::install_miniconda(force = TRUE)
+reticulate::install_miniconda(force = TRUE)
 reticulate::use_miniconda()
-#reticulate::py_install(packages = c("mofapy2"), pip = TRUE)
+reticulate::py_install(packages = c("mofapy2"), pip = TRUE)
 ```
 
 The `mae` object could be used straight to create the MOFA model:
