--- a/visualization_techniques.Rmd
+++ b/visualization_techniques.Rmd
@@ -7,7 +7,7 @@ chapterPreamble()
 
 Whether a data set contains information on a microbial community or it originates from a different source, the way that data are visualized inevitably shapes how they will be interpreted, and motivates the next steps of the analysis.
 
-A large variety of graphing methods belong to microbial analysis, but only few are the choices that will return useful answers about the data. Knowledge on the available tools and possible applications therefore plays an important role for the selection of the most suitable method for the asked question.
+A large variety of graphing methods belong to microbial analysis, but only few are the choices that will return useful answers about the data. Therefore, Knowledge on the available tools and their possible applications plays an important role in selecting the most suitable method for the asked question.
 
 This chapter introduces the reader to a number of visualization techniques found in this book, such as:
 
