--- a/dada2_workflow.Rmd
+++ b/dada2_workflow.Rmd
@@ -125,10 +125,12 @@ head(track)
 ```{r dada_20}
 # ASSIGN TAXONOMY
 
+# Change path
 taxa <- assignTaxonomy(seqtab.nochim, "~/Desktop/dada2_example/tax/silva_nr_v132_train_set.fa.gz", multithread=TRUE)
 ```
 
 ```{r dada2_21}
+# Change path
 taxa <- addSpecies(taxa, "~/Desktop/dada2_example/tax/silva_species_assignment_v132.fa.gz")
 ```
 
