--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -291,7 +291,7 @@ rownames(samdf) <- samples.out
 Convert data into right format and create _TreeSE_ object.
 
 ```{r dada2_4}
-# Create a assays list
+# Create a list that contains assays
 counts <- t(seqtab.nochim)
 assays <- SimpleList(counts = counts)
 
@@ -305,7 +305,7 @@ tse <- TreeSummarizedExperiment(assays = assays,
                                 rowData = taxa
                                 )
 
-# Remove mock sample as it was removed also in tutorial
+# Remove mock sample like it is also done in DADA2 pipeline tutorial
 tse <- tse[ , colnames(tse) != "mock"]
 ```
 
