--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -251,8 +251,8 @@ You can find full workflow script without further explanations and comments from
 
 ```{r dada2_1, include=FALSE}
 # Load objects
-seqtab.nochim <- readRDS("data/dada2_seqtab.nochim.rds")
-taxa <- readRDS("data/dada2_taxa.rds")
+seqtab.nochim <- readRDS("data/dada2_seqtab.nochim")
+taxa <- readRDS("data/dada2_taxa")
 ```
 
 Load required packages.
