--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -543,7 +543,7 @@ Automatically initializing the priors and visualizing their distributions:
 ```{r}
 priors <- pibble(NULL, X, upsilon, Theta, Gamma, Xi)
 names_covariates(priors) <- rownames(X)
-fido::plot(priors, pars="Lambda") + ggplot2::xlim(c(-5, 5))
+plot(priors, pars="Lambda") + ggplot2::xlim(c(-5, 5))
 ```
 
 Estimating the posterior by including the data at `Y`.
@@ -564,14 +564,14 @@ Plotting the summary of the posterior distributions of the regression parameters
 
 ```{r}
 names_categories(posterior) <- rownames(Y)
-fido::plot(posterior,par="Lambda",focus.cov=rownames(X)[2:4])
+plot(posterior,par="Lambda",focus.cov=rownames(X)[2:4])
 ```
 
 Seemingly the covariate "Age_Years" does not have effect on the model as "Delivery_Mode" would,
 and "Sex" to some extent. Let's take a closer look at the two latter ones:
 
 ```{r}
-fido::plot(posterior, par="Lambda", focus.cov = rownames(X)[c(2,4)])
+plot(posterior, par="Lambda", focus.cov = rownames(X)[c(2,4)])
 ```
 
 ## Session Info {-}
