--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -182,7 +182,7 @@ if(!require(reticulate)){
 }
 
 reticulate::install_miniconda(force = TRUE)
-reticulate::use_miniconda()
+reticulate::use_miniconda(condaenv = "env1", required = FALSE)
 reticulate::py_install(packages = c("mofapy2"), pip = TRUE)
 ```
 
