--- a/index.Rmd
+++ b/index.Rmd
@@ -6,6 +6,7 @@ bibliography: [book.bib]
 biblio-style: apalike
 link-citations: yes
 github-repo: microbiome/OMA
+always_allow_html: true
 ---
 
 ```{r, echo=FALSE}
