--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -162,6 +162,9 @@ if(!require(biclust)){
     library(biclust)
 }
 
+# Set seed for reproducibility
+set.seed(3973)
+
 # Find biclusters
 bc <- biclust(corr, method=BCPlaid(), fit.model = y ~ m,
               background = TRUE, shuffle = 100, back.fit = 0, max.layers = 10,
