--- a/book.bib
+++ b/book.bib
@@ -53,7 +53,7 @@
   journal =	 {Nature Methods},
   year =	 2020,
   volume =	 17,
-  pages =	 137--145,
+  pages =	 {137--145},
   doi =		 {10.1038/s41592-019-0654-x}
 }
 
@@ -139,7 +139,7 @@
     year = {1992}
 }
 
-  
+
 @Article{DECIPHER2016,
     title = {Using DECIPHER v2.0 to Analyze Big Biological Sequence Data in R},
     author = {Erik S. Wright},
@@ -295,7 +295,7 @@
   volume =	 11,
   number =	 5,
   pages =	 {e1004226},
-  annote =	 {SPIEC-EASI},  
+  annote =	 {SPIEC-EASI},
   doi =		 {10.1371/journal.pcbi.1004226}
 }
 
