--- a/book.bib
+++ b/book.bib
@@ -330,8 +330,7 @@
   title =	 {Statistical Rethinking},
   publisher =	 {Chapman and Hall/CRC},
   year =	 2020,
-  note =	 {with implementation by Solomon Kurz:
-                  https://bookdown.org/ajkurz/Statistical_Rethinking_recoded/}
+  note =	 {with implementation by Solomon Kurz: https://bookdown.org/ajkurz/Statistical_Rethinking_recoded/}
 }
 
 @article{McInnes2018,
