--- a/book.bib
+++ b/book.bib
@@ -330,7 +330,7 @@
   title =	 {Statistical Rethinking},
   publisher =	 {Chapman and Hall/CRC},
   year =	 2020,
-  note =	 {with implementation by Solomon Kurz: https://bookdown.org/ajkurz/Statistical_Rethinking_recoded/}
+  note =	 {with implementation by Solomon Kurz: https://bookdown.org/ajkurz/Statistical\_Rethinking\_recoded/}
 }
 
 @article{McInnes2018,
@@ -667,7 +667,7 @@ Bioconductor},
   pages =	 115,
   month =	 {October},
   doi =		 {10.1007/s12038-019-9930-2},
-  note =	 {Preprint: https://github.com/openresearchlabs/openresearchlabs.github.io/blob/master/public/publication_resources/papers/2019-Shetty-MDS.pdf},
+  note =	 {Preprint: https://github.com/openresearchlabs/openresearchlabs.github.io/blob/master/public/publication\_resources/papers/2019-Shetty-MDS.pdf},
   status =	 {bioscience},
   keywords =	 {review}
 }
