--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -235,7 +235,7 @@ Table: (\#tab:options) **Recommended options for storing multiple data tables in
 
 ### 16S workflow
 
-Result of shotgun sequencing is large number of files that include all the sequences
+Result of amplicon sequencing is large number of files that include all the sequences
 that were read from samples. Those sequences need to be matched with taxa. Additionally,
 we need to know how many times each taxa were found from each sample. 
 
