Complete section on accessing data

--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -203,7 +203,7 @@ plotRowTree(x[rowData(x)$Phylum %in% top_phyla_mean,],
 
 
 
-## Quality control
+## Quality control {#qc}
 
 ```{r, message=FALSE}
 library(mia)
