--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -71,7 +71,7 @@ with other packages implementing the calculation, such as _`vegan`_
 [@R-vegan].
 
 
-### Richness  
+### Richness {#richness}
 
 Richness gives the number of features present within a community and can be calculated with `estimateRichness`. Each of the estimate diversity/richness/evenness/dominance functions adds the calculated measure(s) to the `colData` of the `SummarizedExperiment` under the given column `name`. Here, we calculate `observed` features as a measure of richness.     
 
